<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="character"
            type="com.example.empire.persistence.entities.Character" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/starwars"
        android:padding="20dp"
        tools:context=".ui.activities.MainActivity">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{character.name}"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/genderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{character.gender}"
            app:layout_constraintTop_toBottomOf="@+id/genderTitle"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/skinColorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skin_color"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/gender"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/skinColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{character.skinColor}"
            app:layout_constraintTop_toBottomOf="@+id/skinColorTitle"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/homeworldTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeworld"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/skinColor"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/homeworld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Not implemented"
            app:layout_constraintTop_toBottomOf="@+id/homeworldTitle"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/moviesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/homeworld"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Not implemented"
            app:layout_constraintTop_toBottomOf="@+id/moviesTitle"
            tools:text="@string/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>